--- a/src/app/components/about/stats-bar/stats-bar.html
+++ b/src/app/components/about/stats-bar/stats-bar.html
@@ -3,19 +3,19 @@
     <div class="grid grid-cols-2 gap-8 md:grid-cols-4 text-center">
       <div class="flex flex-col gap-1">
         <span class="text-4xl font-black text-white">28+</span>
-        <span class="text-sm font-medium text-blue-100 uppercase tracking-wider">Years of Experience</span>
+        <span class="text-sm font-medium text-blue-100 uppercase tracking-wider">{{ 'about.stats.yearsExperience' | translate }}</span>
       </div>
       <div class="flex flex-col gap-1">
         <span class="text-4xl font-black text-white">1k+</span>
-        <span class="text-sm font-medium text-blue-100 uppercase tracking-wider">Cases Won</span>
+        <span class="text-sm font-medium text-blue-100 uppercase tracking-wider">{{ 'about.stats.casesWon' | translate }}</span>
       </div>
       <div class="flex flex-col gap-1">
         <span class="text-4xl font-black text-white">15+</span>
-        <span class="text-sm font-medium text-blue-100 uppercase tracking-wider">Expert Teams</span>
+        <span class="text-sm font-medium text-blue-100 uppercase tracking-wider">{{ 'about.stats.expertTeams' | translate }}</span>
       </div>
       <div class="flex flex-col gap-1">
         <span class="text-4xl font-black text-white">98%</span>
-        <span class="text-sm font-medium text-blue-100 uppercase tracking-wider">Client Satisfaction</span>
+        <span class="text-sm font-medium text-blue-100 uppercase tracking-wider">{{ 'about.stats.clientSatisfaction' | translate }}</span>
       </div>
     </div>
   </div>
